// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inline Validation Inline Validation 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #cc1439;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c3 .c4 {
  margin-bottom: 8px;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="Box-sc-1qu1edy-0 c1"
      color="red"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="error"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        className="c3"
      >
        <p
          className="c4 c5"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          Something has gone wrong
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inline Validation with custom content 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #cc1439;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c9 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:hover {
  cursor: pointer;
  color: #1254c7;
}

.c8 {
  margin-bottom: 8px;
  color: currentColor;
}

.c8:last-child {
  margin-bottom: 0;
}

.c6 {
  color: currentColor;
  margin: 0;
  padding-left: 18px;
}

.c6 .c7 {
  margin-bottom: 0;
}

.c3 .c4 {
  margin-bottom: 8px;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="Box-sc-1qu1edy-0 c1"
      color="red"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="error"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        className="c3"
      >
        <p
          className="c4 c5"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          Something has gone wrong.
        </p>
        <ul
          className="c6"
          color="currentColor"
        >
          <li
            className="c7 c8"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            className="c7 c8"
            color="currentColor"
          >
            Entry must contain a number
          </li>
          <li
            className="c7 c8"
            color="currentColor"
          >
            <a
              className="c9"
              color="blue"
              fontSize="medium"
              href="https://nulogy.design/"
            >
              Custom Link
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inline Validation with list items 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #cc1439;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c8 {
  margin-bottom: 8px;
  color: currentColor;
}

.c8:last-child {
  margin-bottom: 0;
}

.c6 {
  color: currentColor;
  margin: 0;
  padding-left: 18px;
}

.c6 .c7 {
  margin-bottom: 0;
}

.c3 .c4 {
  margin-bottom: 8px;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="Box-sc-1qu1edy-0 c1"
      color="red"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="error"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        className="c3"
      >
        <p
          className="c4 c5"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          Something has gone wrong
        </p>
        <ul
          className="c6"
          color="currentColor"
        >
          <li
            className="c7 c8"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            className="c7 c8"
            color="currentColor"
          >
            Entry must contain a number.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inline Validation with only list items 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #cc1439;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c6 {
  margin-bottom: 8px;
  color: currentColor;
}

.c6:last-child {
  margin-bottom: 0;
}

.c4 {
  color: currentColor;
  margin: 0;
  padding-left: 18px;
}

.c4 .c5 {
  margin-bottom: 0;
}

.c3 .Text-sc-1wu7vpu-0 {
  margin-bottom: 8px;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="Box-sc-1qu1edy-0 c1"
      color="red"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="error"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        className="c3"
      >
        <ul
          className="c4"
          color="currentColor"
        >
          <li
            className="c5 c6"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            className="c5 c6"
            color="currentColor"
          >
            Entry must contain a number.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
